src/K8sManifests/Classifieds/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classifieds-deployment
  namespace: classifieds
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: classifieds-deployment
  template:
    metadata:
      labels:
        app: classifieds-deployment
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: classifieds
        image: acrakslzaccel234.azurecr.io/classifieds:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
