src/K8sManifests/Classifieds/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: classifieds-service
  namespace: classifieds
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: classifieds-deployment
