src/K8sManifests/Classifieds/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  namespace: classifieds
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: classifieds.private.contoso.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: classifieds-service
            port:
              number: 80
